add global list space has app file option (#515)
* add global list space has app file option

* add init add space no application is true and add exception to space

* add list for no application file

* add send force pause and create app time sleep one second

* add has_app_file swagger tag

* add no_application_file with tag true

* add swagger api doc
